# scanner

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GladeFFW.glade  LICENSE  Makefile  README.md  function.c  functions.c  functions.h  gui.glade  gui.xml  lib.h  main.c
css/: global.css
